--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "framer-motion": "^11.7.0",
+    "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
