--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/lateef": "^5.1.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
