--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/lateef": "^5.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
